--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,24 @@
 2_Hardware/Etape_1/bin/main
 .DS_Store
 1_Software/Etape_1/bin/main
+1_Software/Etape_2/bin/main
+1_Software/Etape_2/bin/.create
+1_Software/Etape_3/bin/.create
+1_Software/Etape_3/bin/main
+1_Software/Etape_5/.create
+1_Software/Etape_5/bin/.create
+1_Software/Etape_6/.create
+1_Software/Etape_6/bin/main
+1_Software/Etape_3/.create
+1_Software/Etape_4/.create
+1_Software/Etape_4/bin/.create
+1_Software/Etape_4/bin/main
+1_Software/Etape_5/.create
+1_Software/Etape_5/bin/main
+1_Software/Etape_5/.create
+1_Software/Etape_6/.create
+1_Software/Etape_7/.create
+1_Software/Etape_7/bin/main
+1_Software/Etape_8/.create
+1_Software/Etape_8/bin/main
+1_Software/Etape_8/ref_C.xlsx
